@@ -1,0 +1,3 @@
+{form name="hoge" ethna_action="formnametest"}
+  {form_submit}
+{/form}
