@@ -36,13 +36,14 @@
 - Ethna_Plugin::includePlugin メソッドの実装が動作するものではなかったので変更
 - Ethna_Plugin_Cachemanager のクラスのプロパティに指定する $namespace が意味をなしていなかったので修正 (#17753)
 - PROJECT_DIR/lib/Ethna/extlib 以下にファイルを設置するタイプのプラグインを pear-local などでインストールすると、それ以後
-  ethnaコマンドが使えなくな問題を修正
+  ethnaコマンドが使えなくなる問題を修正
 - 新しいプラグインの命名規則に従っていない古いプラグインを別物として読み込もうとしてクラス名がかぶる問題を修正(#17875) thanks: id:okonomi
 - 存在しない(or 削除された) ethnaコマンドを指定すると Fatal Error が起きるバグを修正 (thanks:kondo_)
 -- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17894
 - Ethna_Plugin_Logwriter の debug_backtrace の一部が取得できず、E_NOTICE が出るバグを修正 (thanks: http://www.remix.gr.jp/)
 - cli 環境で Ethna_Session::start を叩いたときに $_SERVER 変数がないために E_NOTICE が出る問題を修正
 - Smartyのデリミタを変更している場合にi18nコマンドが機能しないバグを修正 (#18668)
+- formタグのname属性が設定できなくなっていたバグを修正 (thanks: shutta) (#19037)
 
 ** 2.5.0-preview5
 
